# Cube-RGB

./: CMakeLists.txt  README.md  main.cpp  shader.hpp
shaders/: fragment.glsl  vertex.glsl
